# WUTA

./: .gitattributes
WUTA-SIM/docs/: FSD_SIMULATOR_DEVELOPMENT.md
WUTA-SIM/log/: latest_build
WUTA-SIM/simulator_bringup/: README.md  package.xml
WUTA-SIM/simulator_bringup/docs/: development.md  trackdrive_lap_timing.md
WUTA-SIM/simulator_bringup/install/: local_setup.sh  setup.sh
WUTA-SIM/simulator_bringup/install/simulator_bringup/lib/simulator_bringup/: simulation_bridge
WUTA-SIM/simulator_bringup/install/simulator_bringup/share/simulator_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
WUTA-SIM/simulator_bringup/install/simulator_bringup/share/simulator_bringup/launch/: simulator.launch.py
WUTA-SIM/simulator_bringup/install/simulator_bringup/share/simulator_bringup/rviz/: wuta_simulator.rviz
WUTA-SIM/simulator_bringup/launch/: simulator.launch.py
WUTA-SIM/simulator_bringup/log/: latest_build
WUTA-SIM/simulator_bringup/rviz/: wuta_simulator.rviz
WUTA-SIM/simulator_bringup/simulator_bringup/: simulation_bridge.py
config/: simulator_defaults.yaml
docs/: 2022中国大学生无人驾驶方程式大赛规则.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  FSAC_RULES.md  ROS_INTERFACE.md  TRACKDRIVE_VALIDATION_LOG.md
external_validation_tracks/: external_fsd_dataset_track_1.yaml  external_fsd_dataset_track_2.yaml  external_fsd_dataset_track_3.yaml  external_fsd_dataset_track_4.yaml  external_fsd_dataset_track_5.yaml  external_fsd_dataset_track_6.yaml  external_fsd_dataset_track_7.yaml  external_fsd_dataset_track_8.yaml  external_fsd_dataset_track_9.yaml
