<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator_bringup</name>
  <version>0.1.0</version>
  <description>Ordered bringup for independent WUTA simulator packages and the optional WUTA-FSD pipeline.</description>
  <maintainer email="wuta@example.com">WUTA</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>wuta_msgs</exec_depend>

  <exec_depend>can_simulator</exec_depend>
  <exec_depend>ins_simulator</exec_depend>
  <exec_depend>lidar_sim</exec_depend>
  <exec_depend>localization_manager</exec_depend>
  <exec_depend>vehicle_model</exec_depend>

  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>boundary_detector</exec_depend>
  <exec_depend>cone_map_builder</exec_depend>
  <exec_depend>controller</exec_depend>
  <exec_depend>lidar_detection</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>path_generator</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
